[package]
name = "slmap"
description = "A simple program for managing symlinks via config file."
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/thedustinmiller/slmap"
readme = "README"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = {version = "3.2", features = ["derive"]}
serp = "0.1.1"
shellexpand = "3.1.0"
