[package]
name = "slmap"
description = "A simple program for managing symlinks via config file."
version = "0.2.1"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/thedustinmiller/slmap"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"
clap = {version = "4.4.0", features = ["derive"]}
shellexpand = "3.1.0"
colored = "2.0.0"

[profile.release]
lto = true
strip = true